--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,13 +17,46 @@ jobs:
         run: (Get-ChildItem source-pngs -Recurse -File | Measure-Object).Count
       - name: downscale-pngs
         run: |
+          $folders = '',
+            '\UI',
+            '\UI\WorldGen',
+            '\UI\PlayerResourceSets',
+            '\UI\PlayerResourceSets\HorizontalBars',
+            '\UI\PlayerResourceSets\FancyClassic',
+            '\UI\CharCreation',
+            '\UI\WorldCreation',
+            '\UI\Minimap',
+            '\UI\Minimap\Leaf',
+            '\UI\Minimap\StoneGold',
+            '\UI\Minimap\Golden',
+            '\UI\Minimap\Default',
+            '\UI\Minimap\Valkyrie',
+            '\UI\Minimap\TwigLeaf',
+            '\UI\Minimap\Sticks',
+            '\UI\Minimap\Retro',
+            '\UI\Minimap\Remix',
+            '\UI\Bestiary',
+            '\UI\Bestiary\NPCs',
+            '\UI\Creative',
+            '\Accessories',
+            '\TownNPCs',
+            '\Armor'
+
+          $input = 'source-pngs'
+          $output = 'temp2'
           foreach( $folder in $folders ) {
             echo "folder: $folder"
             (New-Item $output$folder -ItemType directory)
             tools\downscale_pngs.exe $input$folder $output$folder
           }
-        env:
-          input: 'source-pngs'
-          output: 'temp2'
+        # run: |
+        #   foreach( $folder in $folders ) {
+        #     echo "folder: $folder"
+        #     (New-Item $output$folder -ItemType directory)
+        #     tools\downscale_pngs.exe $input$folder $output$folder
+        #   }
+        # env:
+        #   input: 'source-pngs'
+        #   output: 'temp2'
       - name: count-files
         run: (Get-ChildItem temp2 -Recurse -File | Measure-Object).Count
