--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: windows-latest
     env:
-      folders: "'','\\UI','\\UI\\Minimap\\Golden'"
+      folders: ",\\UI,\\UI\\Minimap\\Golden"
     steps:
       - uses: actions/checkout@v2
       - name: test1
