--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: windows-latest
     env:
-      folders: ",\\UI,\\UI\\Minimap\\Golden"
+      folders: ",\\UI,\\UI\\WorldGen,\\UI\\PlayerResourceSets,\\UI\\PlayerResourceSets\\HorizontalBars,\\UI\\PlayerResourceSets\\FancyClassic,\\UI\\CharCreation,\\UI\\WorldCreation,\\UI\\Minimap,\\UI\\Minimap\\Leaf,\\UI\\Minimap\\StoneGold,\\UI\\Minimap\\Golden,\\UI\\Minimap\\Default,\\UI\\Minimap\\Valkyrie,\\UI\\Minimap\\TwigLeaf,\\UI\\Minimap\\Sticks,\\UI\\Minimap\\Retro,\\UI\\Minimap\\Remix,\\UI\\Bestiary,\\UI\\Bestiary\\NPCs,\\UI\\Creative,\\Accessories,\\TownNPCs,\\Armor"
     steps:
       - uses: actions/checkout@v2
       - name: test1
@@ -50,20 +50,12 @@ jobs:
         #     tools\downscale_pngs.exe $input$folder $output$folder
         #   }
         run: |
-          echo "folders: ${Env:folders}"
-          echo "input: ${Env:input}"
-          echo "output: ${Env:output}"
           $folders = ${Env:folders} -split ','
-          $input = ${Env:input}
-          $output = ${Env:output}
-          echo "folders2: ${Env:folders}"
-          echo "input2: ${Env:input}"
-          echo "output2: ${Env:output}"
 
           foreach( $folder in $folders ) {
             echo "folder: $folder"
-            (New-Item $output$folder -ItemType directory)
-            tools\downscale_pngs.exe $input$folder $output$folder
+            (New-Item ${Env:output}$folder -ItemType directory)
+            tools\downscale_pngs.exe ${Env:input}$folder ${Env:output}$folder
           }
         env:
           input: 'source-pngs'
