--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -76,3 +76,17 @@ jobs:
           output: 'temp5'
       - name: count-files
         run: (Get-ChildItem temp5 -Recurse -File | Measure-Object).Count
+
+      - name: png-to-xnb
+        run: |
+          $folders = ${Env:folders} -split ','
+          foreach( $folder in $folders ) {
+            echo "folder: $folder"
+            (New-Item ${Env:output}$folder -ItemType directory)
+            tools\png_to_xnb.exe ${Env:input}$folder ${Env:output}$folder
+          }
+        env:
+          input: 'temp5'
+          output: 'temp6'
+      - name: count-files
+        run: (Get-ChildItem temp6 -Recurse -File | Measure-Object).Count
