--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -142,7 +142,7 @@ jobs:
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          repo_token: "${{ secrets.RELEASE_GITHUB_TOKEN }}"
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "${{ env.release_version }}-${{ env.terraria_version }}"
           prerelease: true
           title: "${{ env.release_version }}-${{ env.terraria_version }}"
