Do not auto create the release while i'm testing

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -140,11 +140,11 @@ jobs:
         env:
           input: 'temp5'
 
-      - uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "${{ env.release_version }}-${{ env.terraria_version }}"
-          prerelease: true
-          title: "${{ env.release_version }}-${{ env.terraria_version }}"
-          files: |
-            *.zip
+      # - uses: "marvinpinto/action-automatic-releases@latest"
+      #   with:
+      #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
+      #     automatic_release_tag: "${{ env.release_version }}-${{ env.terraria_version }}"
+      #     prerelease: true
+      #     title: "${{ env.release_version }}-${{ env.terraria_version }}"
+      #     files: |
+      #       *.zip
