Revert "Run build on every branch temporarily"
This reverts commit 8d7dd3709065a0f01fb7be4bd676a63336035b08.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,7 +5,7 @@ on: push
 jobs:
   build:
     runs-on: windows-latest
-    # if: github.ref == 'refs/heads/v1.4.4.6'
+    if: github.ref == 'refs/heads/v1.4.4.6'
     env:
       terraria_version: '1.4.4.6'
       release_version: 'v0.16'
