Try to fail build if python failed
I've no clue about windows, got snippet from here: https://stackoverflow.com/questions/9948517/how-to-stop-a-powershell-script-on-the-first-error

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,6 +43,9 @@ jobs:
             echo "folder: $folder"
             (New-Item ${Env:output}$folder -ItemType directory)
             python tools\remove_separators.py ${Env:input}$folder ${Env:output}$folder
+            if ($lastexitcode -ne 0) {
+              throw ("Exec: " + $errorMessage)
+            }
           }
         env:
           input: 'temp2'
