Convert tile outlines

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,12 +5,12 @@ on: push
 jobs:
   build:
     runs-on: windows-latest
-    if: github.ref == 'refs/heads/npc-portraits'
+    if: github.ref == 'refs/heads/convert-tile-outlines'
     env:
       terraria_version: '1.4.5'
       release_version: 'v0.16.4'
 
-      folders: ",\\UI,\\UI\\Workshop,\\UI\\WorldGen,\\UI\\PlayerResourceSets,\\UI\\PlayerResourceSets\\HorizontalBars,\\UI\\PlayerResourceSets\\FancyClassic,\\UI\\CharCreation,\\UI\\WorldCreation,\\UI\\Minimap,\\UI\\Minimap\\Leaf,\\UI\\Minimap\\StoneGold,\\UI\\Minimap\\Golden,\\UI\\Minimap\\Default,\\UI\\Minimap\\Valkyrie,\\UI\\Minimap\\TwigLeaf,\\UI\\Minimap\\Sticks,\\UI\\Minimap\\Retro,\\UI\\Minimap\\Remix,\\UI\\Bestiary,\\UI\\Bestiary\\NPCs,\\UI\\Creative,\\Accessories,\\TownNPCs,\\TownNPCs\\Portraits,\\TownNPCs\\Shimmered,\\Armor"
+      folders: ",\\UI,\\UI\\Workshop,\\UI\\WorldGen,\\UI\\PlayerResourceSets,\\UI\\PlayerResourceSets\\HorizontalBars,\\UI\\PlayerResourceSets\\FancyClassic,\\UI\\CharCreation,\\UI\\WorldCreation,\\UI\\Minimap,\\UI\\Minimap\\Leaf,\\UI\\Minimap\\StoneGold,\\UI\\Minimap\\Golden,\\UI\\Minimap\\Default,\\UI\\Minimap\\Valkyrie,\\UI\\Minimap\\TwigLeaf,\\UI\\Minimap\\Sticks,\\UI\\Minimap\\Retro,\\UI\\Minimap\\Remix,\\UI\\Bestiary,\\UI\\Bestiary\\NPCs,\\UI\\Creative,\\Accessories,\\TownNPCs,\\TownNPCs\\Portraits,\\TownNPCs\\Shimmered,\\Armor,\\Misc\\TileOutlines"
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -123,7 +123,6 @@ jobs:
           "For more information visit: https://forums.terraria.org/index.php?threads/high-definition-version-of-all-textures-up-to-terraria-1-4-5.39115/" >> README.txt
 
           rmdir -r Images\Backgrounds -ErrorAction:SilentlyContinue
-          rmdir -r Images\Misc -ErrorAction:SilentlyContinue
           rmdir -r Images\UI\WorldGen -ErrorAction:SilentlyContinue
           rmdir Images\UI\Button* -ErrorAction:SilentlyContinue
 
@@ -137,7 +136,6 @@ jobs:
           mv Content\${Env:input} Content\Images
 
           rmdir -r Content\Images\Backgrounds -ErrorAction:SilentlyContinue
-          rmdir -r Content\Images\Misc -ErrorAction:SilentlyContinue
           rmdir -r Content\Images\UI\WorldGen -ErrorAction:SilentlyContinue
           rmdir Content\Images\UI\Button* -ErrorAction:SilentlyContinue
 
